--- a/MaterialTabDemo/project.properties
+++ b/MaterialTabDemo/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-21
-android.library.reference.1=../../../../../android-ui-master/src/main
+android.library.reference.1=../../../Downloads/android-ui-master/src/main
